# sqlbench-ds

./: .gitignore  README.md
docs/: README.md
queries-spark/sf=1/: q1.sql  q10.sql  q12.sql  q16.sql  q20.sql  q24.sql  q28.sql  q3.sql  q30.sql  q31.sql  q34.sql  q35.sql  q37.sql  q4.sql  q40.sql  q41.sql  q45.sql  q48.sql  q49.sql  q5.sql  q50.sql  q52.sql  q53.sql  q54.sql  q55.sql  q56.sql  q58.sql  q59.sql  q60.sql  q64.sql  q66.sql  q67.sql  q70.sql  q73.sql  q74.sql  q77.sql  q79.sql  q82.sql  q85.sql  q89.sql  (+10 more)
queries-spark/sf=10/: q10.sql  q11.sql  q12.sql  q15.sql  q16.sql  q17.sql  q18.sql  q19.sql  q20.sql  q21.sql  q23.sql  q24.sql  q25.sql  q27.sql  q28.sql  q3.sql  q30.sql  q31.sql  q32.sql  q33.sql  q35.sql  q36.sql  q37.sql  q38.sql  q4.sql  q40.sql  q41.sql  q42.sql  q45.sql  q46.sql  q47.sql  q49.sql  q5.sql  q50.sql  q51.sql  q53.sql  q54.sql  q55.sql  q56.sql  q58.sql  (+31 more)
queries-spark/sf=100/: q11.sql  q12.sql  q13.sql  q15.sql  q16.sql  q19.sql  q2.sql  q20.sql  q21.sql  q22.sql  q23.sql  q24.sql  q26.sql  q27.sql  q30.sql  q32.sql  q34.sql  q35.sql  q36.sql  q37.sql  q38.sql  q39.sql  q4.sql  q40.sql  q41.sql  q42.sql  q43.sql  q44.sql  q45.sql  q46.sql  q47.sql  q48.sql  q49.sql  q5.sql  q50.sql  q51.sql  q53.sql  q54.sql  q56.sql  q58.sql  (+36 more)
queries-spark/sf=1000/: q1.sql  q10.sql  q11.sql  q12.sql  q13.sql  q15.sql  q16.sql  q17.sql  q18.sql  q20.sql  q21.sql  q22.sql  q24.sql  q25.sql  q3.sql  (+61 more)
runners/ballista/: Cargo.toml
runners/ballista/src/: main.rs
runners/datafusion/: .gitignore  Cargo.toml  README.md
runners/datafusion/src/: main.rs
(+1023 files in other folders)
