[package]
name = "ballista-sqlbench-ds"
version = "0.1.0"
edition = "2021"
rust-version = "1.62"
publish = false

[dependencies]
ballista = "0.10.0"
datafusion = "14.0.0"
qpml = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
structopt = "0.3.26"
tokio = { version = "^1.0", features = ["rt-multi-thread"] }
