[package]
name = "datafusion-sqlbench-ds"
version = "0.1.0"
edition = "2021"
rust-version = "1.62"
publish = false

[dependencies]
datafusion = "15.0"
qpml = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
structopt = "0.3.26"
tokio = { version = "^1.0", features = ["rt-multi-thread"] }
